fixed decoding issue, fixed generateAnswers fn, fixed positioning of blobs using z-index, added radio buttons

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 
   color: #293264;
   background-color: #F5F7FB;
+  z-index: -2;
 }
 
 .app-intro {
@@ -12,18 +13,25 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  z-index: 1;
+}
+
+.app-quiz {
+  z-index: 1;
 }
 
 .top__blob {
   position: absolute;
   top: 0;
   right: 0;
+  z-index: -1;
 }
 
 .bottom__blob {
   position: absolute;
   bottom: 0;
   left: 0;
+  z-index: -1;
 }
 
 
